--- a/gmail/index.html
+++ b/gmail/index.html
@@ -27,22 +27,22 @@
 
     <!-- questo è il corpo principale -->
       <main>
-        <article class="lette">
+        <article class="mail lette">
           <input type="checkbox" name="seleziona" value=""> <strong>&bigstar; Oggetto della email</strong>
           <span class="testo"> &dash; testo della email&hellip;</span>
         </article>
 
-        <article class="nonlette">
+        <article class="mail nonlette">
           <input type="checkbox" name="seleziona" value=""> <strong>&bigstar; Oggetto della email</strong>
           <span class="testo"> &dash; testo della email&hellip;</span>
         </article>
 
-        <article class="lette">
+        <article class="mail lette">
           <input type="checkbox" name="seleziona" value=""> <strong>&bigstar; Oggetto della email</strong>
           <span class="testo"> &dash; testo della email&hellip;</span>
         </article>
 
-        <article class="lette">
+        <article class="mail lette">
           <input type="checkbox" name="seleziona" value=""> <strong>&bigstar; Oggetto della email</strong>
           <span class="testo"> &dash; testo della email&hellip;</span>
         </article>
